# ddpm_financial_risk_assessment--v1

./: README.md  pyproject.toml  requirements.txt  settings.ini  settings.toml  setup.py
.github/workflows/: deploy.yaml
ddpm_backtest/: VaR_ES.py  _modidx.py  abalation_test.py  data_loaders.py  diffusion_utils.py  models.py  noising_time.py  samplers.py  sampling_utils.py  tests.py
ddpm_lib/: VaR_Es.py  _modidx.py  data_loaders.py  diffusion_utils.py  models.py  noisify_time_emb.py  samplers.py
nbs/: 00_core.ipynb  VaR_ES.ipynb  abalation.ipynb  best_model.pt  complete_implementation_with_kupeic_and_christoffersen.ipynb  cond_for_testing.ipynb  data_loaders.ipynb  diffusion_models.ipynb  generating_data.ipynb  index.ipynb  models.ipynb  nbdev.yml  noising_time.ipynb  patch_nbs.py
