[build-system]
requires = ["setuptools>=68.0", "wheel", "packaging"]
build-backend = "setuptools.build_meta"

[project]
name="ddpm_backtest"
requires-python=">=3.9"
dynamic = [ "keywords", "description", "version", "dependencies", "optional-dependencies", "readme", "license", "authors", "classifiers", "entry-points", "scripts", "urls"]

[tool.uv]
cache-keys = [{ file = "pyproject.toml" }, { file = "settings.ini" }, { file = "setup.py" }]
